--- a/app/src/main/res/values-kk/strings.xml
+++ b/app/src/main/res/values-kk/strings.xml
@@ -2733,7 +2733,7 @@
     <string name="preferences_communication__category_censorship_circumvention">Цензураны айналып өту</string>
     <!-- Title of the \'censorship circumvention\' toggle switch -->
     <string name="preferences_communication__censorship_circumvention">Цензураны айналып өту</string>
-    <string name="preferences_communication__censorship_circumvention_if_enabled_signal_will_attempt_to_circumvent_censorship">Егер Signal іске қосулы болса, ол цензураны айналып өтуге тырысады. Signal цензураға ұшырайтын жерде болмайынша, бұл функцияны іске қосуға болмайды.</string>
+    <string name="preferences_communication__censorship_circumvention_if_enabled_signal_will_attempt_to_circumvent_censorship">Егер Molly іске қосулы болса, ол цензураны айналып өтуге тырысады. Molly цензураға ұшырайтын жерде болмайынша, бұл функцияны іске қосуға болмайды.</string>
     <!-- Summary text for \'censorship circumvention\' toggle. Indicates that we automatically enabled it because we believe you\'re in a censored country -->
     <string name="preferences_communication__censorship_circumvention_has_been_activated_based_on_your_accounts_phone_number">Цензураны айналып өту функциясы тіркелгіңіздің телефон нөмірінің негізінде белсендірілді.</string>
     <!-- Summary text for \'censorship circumvention\' toggle. Indicates that you disabled it even though we believe you\'re in a censored country -->
