--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -2901,7 +2901,7 @@
     <string name="preferences_communication__category_censorship_circumvention">Omijanie cenzury</string>
     <!-- Title of the \'censorship circumvention\' toggle switch -->
     <string name="preferences_communication__censorship_circumvention">Omijanie cenzury</string>
-    <string name="preferences_communication__censorship_circumvention_if_enabled_signal_will_attempt_to_circumvent_censorship">Włączenie uruchamia mechanizmy omijania cenzury. Nie włączaj, jeśli kraj w którym się znajdujesz nie blokuje Signal.</string>
+    <string name="preferences_communication__censorship_circumvention_if_enabled_signal_will_attempt_to_circumvent_censorship">Włączenie uruchamia mechanizmy omijania cenzury. Nie włączaj, jeśli kraj w którym się znajdujesz nie blokuje Molly.</string>
     <!-- Summary text for \'censorship circumvention\' toggle. Indicates that we automatically enabled it because we believe you\'re in a censored country -->
     <string name="preferences_communication__censorship_circumvention_has_been_activated_based_on_your_accounts_phone_number">Omijanie cenzury włączone dla Twojego numeru telefonu i konta Signal.</string>
     <!-- Summary text for \'censorship circumvention\' toggle. Indicates that you disabled it even though we believe you\'re in a censored country -->
