--- a/app/src/main/res/values-sr/strings.xml
+++ b/app/src/main/res/values-sr/strings.xml
@@ -2733,7 +2733,7 @@
     <string name="preferences_communication__category_censorship_circumvention">Заобилазак цензуре</string>
     <!-- Title of the \'censorship circumvention\' toggle switch -->
     <string name="preferences_communication__censorship_circumvention">Заобилазак цензуре</string>
-    <string name="preferences_communication__censorship_circumvention_if_enabled_signal_will_attempt_to_circumvent_censorship">Уколико је омогућено, Signal ће покушати да заобиђе цензуру. Молимо вас да ову могућност користите искључиво ако се не налазите негде где је Signal цензурисан.</string>
+    <string name="preferences_communication__censorship_circumvention_if_enabled_signal_will_attempt_to_circumvent_censorship">Уколико је омогућено, Molly ће покушати да заобиђе цензуру. Молимо вас да ову могућност користите искључиво ако се не налазите негде где је Molly цензурисан.</string>
     <!-- Summary text for \'censorship circumvention\' toggle. Indicates that we automatically enabled it because we believe you\'re in a censored country -->
     <string name="preferences_communication__censorship_circumvention_has_been_activated_based_on_your_accounts_phone_number">Заобилазак цензуре је аутоматски омогућен јер ваш број телефона припада ризичној групи.</string>
     <!-- Summary text for \'censorship circumvention\' toggle. Indicates that you disabled it even though we believe you\'re in a censored country -->
