--- a/app/src/main/res/values-sw/strings.xml
+++ b/app/src/main/res/values-sw/strings.xml
@@ -2733,7 +2733,7 @@
     <string name="preferences_communication__category_censorship_circumvention">Kukwepa udhibiti</string>
     <!-- Title of the \'censorship circumvention\' toggle switch -->
     <string name="preferences_communication__censorship_circumvention">Kukwepa udhibiti</string>
-    <string name="preferences_communication__censorship_circumvention_if_enabled_signal_will_attempt_to_circumvent_censorship">Ikiwezeshwa, Signal itajaribu kukwepa udhibiti. Usiruhusu kipengele hiki ila ukiwa katika eneo ambalo Signal imedhibiitiwa.</string>
+    <string name="preferences_communication__censorship_circumvention_if_enabled_signal_will_attempt_to_circumvent_censorship">Ikiwezeshwa, Molly itajaribu kukwepa udhibiti. Usiruhusu kipengele hiki ila ukiwa katika eneo ambalo Molly imedhibiitiwa.</string>
     <!-- Summary text for \'censorship circumvention\' toggle. Indicates that we automatically enabled it because we believe you\'re in a censored country -->
     <string name="preferences_communication__censorship_circumvention_has_been_activated_based_on_your_accounts_phone_number">Kukwepa udhibiti kumeamlishwa kulingana na nambari ya simu ya akaunti yako.</string>
     <!-- Summary text for \'censorship circumvention\' toggle. Indicates that you disabled it even though we believe you\'re in a censored country -->
