--- a/app/src/main/res/values-ky/strings.xml
+++ b/app/src/main/res/values-ky/strings.xml
@@ -2649,7 +2649,7 @@
     <string name="preferences_communication__category_censorship_circumvention">Цензураны кыйгап өтүү</string>
     <!-- Title of the \'censorship circumvention\' toggle switch -->
     <string name="preferences_communication__censorship_circumvention">Цензураны кыйгап өтүү</string>
-    <string name="preferences_communication__censorship_circumvention_if_enabled_signal_will_attempt_to_circumvent_censorship">Эгер иштетилсе, Signal цензураны кыйгап өтүүгө аракет кылат. Signal цензураланган жерде болбосоңуз, бул функцияны иштетпеңиз.</string>
+    <string name="preferences_communication__censorship_circumvention_if_enabled_signal_will_attempt_to_circumvent_censorship">Эгер иштетилсе, Molly цензураны кыйгап өтүүгө аракет кылат. Molly цензураланган жерде болбосоңуз, бул функцияны иштетпеңиз.</string>
     <!-- Summary text for \'censorship circumvention\' toggle. Indicates that we automatically enabled it because we believe you\'re in a censored country -->
     <string name="preferences_communication__censorship_circumvention_has_been_activated_based_on_your_accounts_phone_number">Аккаунтуңуздун телефон номеринин негизинде цензураны кыйгап өтүү иштетилди.</string>
     <!-- Summary text for \'censorship circumvention\' toggle. Indicates that you disabled it even though we believe you\'re in a censored country -->
